<resources>
    <string name="app_name">এক নজরে বাংলাদেশ</string>
    <string name="khulna_divin">খুলনা বিভাগ</string>
    <string name="chittagong_division">চট্টগ্রাম বিভাগ</string>
    <string name="dhaka_division">ঢাকা বিভাগ</string>
    <string name="barishal_division">বরিশাল বিভাগ</string>
    <string name="mymensingh_division">ময়মনসিংহ বিভাগ</string>
    <string name="rangpur_division">রংপুর বিভাগ</string>
    <string name="rajshahi_division">রাজশাহী বিভাগ</string>
    <string name="sylhet_division">সিলেট বিভাগ</string>
    <string name="kushtia_text">
        ★পরিচিতিঃ পূর্বে কুষ্টিয়া নদীয়া জেলার (বর্তমানে ভারতের পশ্চিমবঙ্গে) অন্তর্ভুক্ত ছিল। ১৮৬৯ সালে কুষ্টিয়ায় একটি পৌরসভা প্রতিষ্ঠিত হয়। হ্যামিলটনস গেজেট প্রথম কুষ্টিয়া শহরের কথা উল্লেখ করে।\n\n

        ★দর্শনীয় স্থানঃ \n\n
        1. রবীন্দ্রনাথের কুঠিবাড়ীঃ কুমারখালি উপজেলার শিলাইদহে রবীন্দ্রনাথের স্মৃতিবিজড়িত কুঠিবাড়ী রয়েছে।\n\n
        2. ফকির লালন সাঁইজির মাজারঃ বাউল ফকির লালন সাঁইজির মাজার কুমারখালি উপজেলার চাঁপড়া ইউনিয়নের ছেঁউড়িয়া গ্রামে।\n\n
        3. টেগর লজঃ কুষ্টিয়া শহরের মিলপাড়ায় অবস্থিত এই দোতলা ভবনটি।\n\n
        4. পরিমল থিয়েটারঃ কুষ্টিয়া শহরের স্থায়ী রঙ্গমঞ্চ।\n\n
        5. গোপীনাথ জিউর মন্দিরঃ নলডাঙ্গার মহারাজা প্রমথ ভূষণ দেব রায় কর্তৃক দানকৃত জমির উপর নির্মিত।\n\n
        6. মীর মশাররফ হোসেনের বাস্তুভিটাঃ বাংলা সাহিত্যের অন্যতম শ্রেষ্ঠ ঔপন্যাসিক মীর মশাররফ হোসেনের বাস্ত্তভিটা কুমারখালী উপজেলার লাহিনীপাড়ায় অবস্থিত।\n\n
        7. পাকশী রেল সেতুঃ কুষ্টিয়ার ভেড়ামারায় অবস্থিত বাংলাদেশের সবচেয়ে বড় রেল সেতু।\n\n
        8. লালন শাহ সেতুঃ কুস্টিয়া জেলার পদ্মা নদীর উপর নির্মিত "লালন শাহ" সেতুটি বাংলাদেশের দ্বিতীয় বৃহত্তম সেতু।\n\n

        ★বিখ্যাত খাবারঃ তিলের খাজা, কুলফি আইসক্রিম\n\n
    </string>
    <string name="khulna_text">
        ★পরিচিতিঃ খুলনা জেলা (খুলনা জিলা নামেও পরিচিত) হল বাংলাদেশের দক্ষিণ-পশ্চিমাঞ্চলের একটি প্রশাসনিক এলাকা। এটি খুলনা বিভাগে অবস্থিত।\n\n

        ★দর্শনীয় স্থানঃ \n\n
        1. পৃথিবীর বৃহত্তম উপকূলীয় বনভূমি সুন্দরবন, খুলনা, বাগেরহাট, সাতক্ষীরা\n\n
        2. ষাট গম্বুজ মসজিদ, বাগেরহাট\n\n
        2. খান জাহান আলি (র) মাজার, বাগেরহাট\n\n
        3. খুলনা বিভাগীয় জাদুঘর, খুলনা\n\n
        4. বনবিলাস চিড়িয়াখানা, খুলনা\n\n
        5. রূপসা নদী\n\n
        6. বিশ্বকবি রবিন্দ্রনাথের শ্বশুরবাড়ি, দক্ষিণ ডিহি, ফুলতলা, খুলনা\n\n

        ★বিখ্যাত খাবারঃ সন্দেশ, নারিকেল, গলদা চিংড়ি\n\n
    </string>
    <string name="chuadanga_text">
        ★পরিচিতিঃ চুয়াডাঙ্গা জেলা বাংলাদেশের পশ্চিমাঞ্চলের খুলনা বিভাগের একটি প্রশাসনিক অঞ্চল। পূর্বে এটি বৃহত্তর কুষ্টিয়া জেলার অন্তর্গত ছিল। দেশ বিভাগের পূর্বে এটি পশ্চিম বঙ্গের নদিয়া জেলার অন্তর্গত ছিল। ১৯৭১ সালের ২৬শে মার্চ মুক্তিযুদ্ধের সর্বপ্রথম কমান্ড দক্ষিণ-পশ্চিমাঞ্চলীয় কমান্ড গঠিত হয়েছিল চুয়াডাঙ্গায়। মুক্তিযুদ্ধের আট নম্বর সেক্টরের হেডকোয়ার্টার ছিল চুয়াডাঙ্গা সদরের ৪নং ইপিআর এর হেডকোয়ার্টার। ৪নং ইপিআর প্রধান মেজর আবু ওসমান চৌধুরী এবং ডাঃ আসহাব-উল-হক জোয়ার্দ্দার একই দিন সকাল ৯:৩০ এ চুয়াডাঙ্গা শহরের বড় বাজার চৌরাস্তার মোড়ে সর্বপ্রথম দখলদার পাকিস্তানি সামরিক বাহিনীর বিরুদ্ধে বিদ্রোহ এবং সর্বাত্মক যুদ্ধ ঘোষণা করেন। বাংলাদেশ রেডক্রস বর্তমানে রেডক্রিসেন্ট সোসাইটি চুয়াডাঙ্গাতে প্রতিষ্ঠিত হয়। এছাড়া স্বাধীন বাংলাদেশের ডাক বিভাগ এবং টেলিযোগাযোগ ব্যবস্থা এই চুয়াডাঙ্গায় প্রথম প্রতিষ্ঠা লাভ করে। ১৯৭১ সালের মুক্তিযুদ্ধ চলাকালীন সময়ে ১০ই এপ্রিল প্রবাসী বাংলাদেশ সরকার চুয়াডাঙ্গা কে গনপ্রজাতন্ত্রী বাংলাদেশ সরকারের অস্থায়ী রাজধানী ঘোষণা করেন। এবং ১৪ই এপ্রিল পর্যন্ত তা কার্যকর ছিলো। পরবর্তীতে নিরাপত্তার কথা ভেবে রাজধানী মেহেরপুরের বৌদ্দনাথ তলায়‌‌ বর্তমানে মুজিবনগর এ সরিয়ে নেওয়া হয়। ১৮৬২ সালের ১৫ নভেম্বর ব্রিটিশরা বাংলাদেশের প্রথম রেল পথ চুয়াডাঙ্গা জেলার দর্শনা থেকে কুষ্টিয়া জেলার জগতী পর্যন্ত চালু করেন। চুয়াডাঙ্গা জেলার দর্শনা রেলস্টেশন হল বাংলাদেশের প্রথম রেলস্টেশন।\n\n

        ★দর্শনীয় স্থানঃ \n\n
        1. পুলিশ পার্ক - পুলিশ সুপার-এর কার্যালয় সংলগ্ন\n\n
        2. দত্তনগর কৃষি খামার, জীবননগর\n\n
        3. শিশু স্বর্গ - ফেরি ঘাট রোড\n\n
        4. নাটুদহের আট কবর - মুক্তিযুদ্ধে শহীদ আটজন বীর মুক্তিযোদ্ধার কবর\n\n
        5. কেরু এন্ড কোম্পানি এন্ড ডিস্টিলারি - দর্শনা\n\n
        6. তিন গম্বুজবিশিষ্ট চুয়াডাঙ্গা বড় মসজিদ\n\n
        7. ঘোলদাড়ি জামে মসজিদ (১০০৬ খ্রিস্টাব্দ) - আলমডাঙ্গা উপজেলার ঘোলদাড়ি গ্রামে\n\n
        8. তিয়রবিলা বাদশাহী মসজিদ - আলমডাঙ্গা উপজেলার খাসকররা ইউনিয়নের তিয়রবিলা গ্রাম\n\n
        9. ঠাকুরপুর মসজিদ\n\n
        10. শিবনগর মসজিদ\n\n
        11. জামজামি মসজিদ\n\n
        12. আট কবর- দামুড়হুদা\n\n
        13. হাজারদুয়ারি স্কুল - দামুড়হুদা\n\n
        14. নীলকুঠি - কার্পাসডাঙ্গা ও ঘোলদাড়ি\n\n
        15. আলমডাঙ্গা রেলওয়ে স্টেশন - ব্রিটিশ আমলে নীলকুঠি হিসেবে ব্যবহৃত হত\n\n
        16. খাজা মালিক উল গাউস -এর মাজার - তিতুদহ ইউনিয়নের গড়াইটুপি গ্রাম।\n\n

        ★বিখ্যাত খাবারঃ পান, ভুট্টা\n\n
    </string>
    <string name="jhenaidah_text">
        ★পরিচিতিঃ ঝিনাইদহ জেলা বাংলাদেশের দক্ষিণ-পশ্চিমাঞ্চলের খুলনা বিভাগের একটি প্রশাসনিক অঞ্চল।\n\n

        ★দর্শনীয় স্থানঃ \n\n
        1. নলডাঙ্গা রাজবাড়ি\n\n
        2. সাতগাছিয়া মসজিদ\n\n
        3. বারবাজারের প্রাচীন মসজিদ\n\n
        4. গাজীকালু চম্পাবতীর মাজার\n\n
        5. শৈলকূপা জমিদার বাড়ি\n\n
        6. খালিশপুর নীলকুঠি\n\n
        7. গলাকাটা মসজিদ\n\n
        7. জোড় বাংলা মসজিদ\n\n
        8. পায়রা দূয়াহ্\n\n
        9. শাহী মসজিদ\n\n
        10. শিব মন্দির\n\n
        11. ঢোল সমুদ্রের দীঘি\n\n
        12. মিয়া বাড়ির দালান\n\n
        13. পাঞ্জু শাহ'র মাজার\n\n
        14. কে,পি, বসুর বাড়ী\n\n
        15. সুইতলা মল্লিকপুর\n\n
        16. বলুদেওয়ানের মাজার\n\n

        ★বিখ্যাত খাবারঃ হরি ও ম্যানেজারের ধান\n\n
    </string>
    <string name="narail_text">
        ★পরিচিতিঃ নড়াইল জেলা বাংলাদেশের দক্ষিণাঞ্চলের খুলনা বিভাগের একটি জেলা। ১৮৬১ সালে যশোর জেলার অধীন নড়াইল মহাকুমা প্রতিষ্ঠিত হয়। নড়াইল শব্দটি স্থানীয় লোকমুখে নড়াল নামে উচ্চারিত হয়। ঐ সময় নড়াইল সদর, লোহাগড়া ও কালিয়া থানার সমন্বয়ে এই মহাকুমা গঠিত হয়। ১৯৮৪ সালের ১লা মার্চ নড়াইল মহাকুমাকে জেলায় রুপান্তরিত করা হয়।\n\n

        ★দর্শনীয় স্থানঃ \n\n
        1. গোয়াল বাথান গ্রামের মসজিদ (১৬৫৪)\n\n
        2. কদমতলা মসজিদ\n\n
        3. নালদীতে গাজীর দরগা\n\n
        4. উজিরপুরে রাজা কেশব রায়ের বাড়ী\n\n
        5. জোড় বাংলায় অষ্টাদশ শতাব্দীতে নির্মিত রাধাগোবিন্দ মন্দির\n\n
        6. লক্ষ্মীপাশায় কালিবাড়ী\n\n
        7. নিহিনাথতলার বড়দিয়াতে মঠ\n\n
        8. মধুমতি নদীর উপর নির্মিত চাপাইল সেতু\n\n

        ★বিখ্যাত খাবারঃ তপেড়ো সন্দেশ, খেজুর গুড়, খেজুর রস\n\n
    </string>
    <string name="bagerhat_text">
        ★পরিচিতিঃ বাগেরহাট দক্ষিণ পশ্চিম বাংলাদেশের একটি জেলা। এটি খুলনা বিভাগ এর অন্তর্গত।\n\n

        ★দর্শনীয় স্থানঃ \n\n
        1. ষাট গম্বুজ মসজিদ\n\n
        3. খান জাহান আলী-এর মাজার\n\n
        4. সুন্দরবন\n\n
        5. মংলা বন্দর\n\n
        6. রেজা খোদা মসজিদ\n\n
        7. জিন্দা পীর মসজিদ\n\n
        8. ঠান্ডা পীর মসজিদ\n\n
        8. সিংগাইর মসজিদ\n\n
        9. বিবি বেগুনি মসজিদ\n\n
        10. চুনাখোলা মসজিদ\n\n
        11. নয় গম্বুজ মসজিদ\n\n
        12. কোদলা মঠ\n\n
        13. রণবিজয়পুর মসজিদ\n\n
        14. দশ গম্বুজ মসজিদ\n\n
        15. সুন্দরবন রিসোর্ট, বারাকপুর\n\n
        16. চন্দ্রমহল, রনজিতপুর\n\n
        17. খান জাহান আলী বেসামরিক বিমান বন্দর\n\n

        ★বিখ্যাত খাবারঃ চিংড়ি, সুপারি\n\n
    </string>
    <string name="magura_text">
        ★পরিচিতিঃ মাগুরা জেলা বাংলাদেশের দক্ষিণ-পশ্চিমাঞ্চলের একটি প্রশাসনিক অঞ্চল। এটি খুলনা বিভাগের একটি জেলা। ঢাকা থেকে মাগুরার দূরত্ব ১৭৬ কিলোমিটার। বাস যাতায়াতের প্রধান মাধ্যম। বাসে মাগুরা থেকে ঢাকা যেতে ৫ ঘন্টা সময় লাগে। মাগুরায় কোনও ট্রেন যোগাযোগ নেই।\n\n

        ★দর্শনীয় স্থানঃ \n\n
        1. রাজা সীতারাম রায়ের প্রাসাদ-দুর্গ -এর রাজবাড়ী\n\n
        2. কবি কাজী কাদের নেওয়াজ এর বাড়ী\n\n
        3. বিড়াট রাজার বাড়ী\n\n
        4. পীর তোয়াজউদ্দিন -এর মাজার ও দরবার শরীফ\n\n
        5. চন্ডীদাস ও রজকিনীর ঐতিহাসিক ঘাট\n\n
        6. সিদ্ধেশ্বরী মঠ\n\n
        7. মুক্তিযুদ্ধের চিহ্নঃ মাগুরা পিটিআই চত্ত্বরে গণকবর, ওয়াবদাপাড়া খাল, বিনোদপুর বাজার, গলাকাটা সেতু (ছাইঘারিয়া)। ছাইঘারিয়া স্মৃতি সৌধ পিটিআই প্রধান ফাটক মাগুরা বিশ্বরোড সংলগ্ন।\n\n

        ★বিখ্যাত খাবারঃ রসমালাই\n\n
    </string>
    <string name="meherpur_text">
        ★পরিচিতিঃ মেহেরপুর জেলা বাংলাদেশের মধ্যাঞ্চলের খুলনা বিভাগের একটি প্রশাসনিক অঞ্চল।মুক্তিযুদ্ধের সময় মেহেরপুরে পাকিস্তান বাহিনী ও মুক্তিযোদ্ধাদের মধ্যে সংঘটিত বেশ কিছু প্রাথমিক যুদ্ধের সাক্ষী। ১৯৭১ সালের ২৬ মার্চ মুক্তিযুদ্ধের সর্বপ্রথম কমান্ড, দক্ষিণ পশ্চিমাঞ্চলীয় কমান্ড গঠিত হয়েছিল। পাকিস্তান বাহিনীর বিরুদ্ধে সর্বাত্মক যুদ্ধ ঘোষণা করেন। মুক্তিযুদ্ধ চলাকালীন সময়ে প্রবাসী বাংলাদেশ সরকার মেহেরপুর জেলার মুজিবনগর আম্রকাননে শপথ গ্রহণ করে অস্থায়ী সরকার গঠন করে এবং গণপ্রজাতন্ত্রী বাংলাদেশের অস্থায়ী রাজধানী ঘোষণা করে।মুক্তিযুদ্ধ চলাকালে পাকিস্তান বাহিনী এবং মুক্তিবাহিনীর মধ্যে মেহেরপুরে সম্মুখ যুদ্ধের কথা নথিভুক্ত আছে। । ২৬শে ফেব্রুয়ারি,১৯৮৪ সালে কুষ্টিয়া থেকে পৃথক করে মেহেরপুরকে স্বতন্ত্র জেলার মর্যাদা দেয়া হয়।\n\n

        ★দর্শনীয় স্থানঃ \n\n
        1. করমদী গোসাঁইডুবি মসজিদ\n\n
        2. শিব মন্দির , বল্লভপুর\n\n
        3. বরকত বিবির মাজার\n\n
        4. বাঘুয়াল পীরের দরগা\n\n
        5. ভবানীপুর মন্দির\n\n
        6. ভাটপাড়া ও আমঝুপি নীলকুঠি\n\n
        7. মুজিবনগর স্মৃতিসৌধ\n\n
        8. পৌর ঈদগাহ\n\n
        9. মেহেরপুর শহীদ স্মৃতিসৌধ\n\n
        10. আমদহ গ্রামের স্থাপত্য নিদর্শন\n\n
        11. সিদ্ধেশ্বরী কালী মন্দির\n\n
        12. আমঝুপি নীলকুঠি\n\n
        13. ভাটপাড়া নীলকুঠি\n\n
        14. ভবানন্দপুর মন্দির\n\n
        15. কালাচা‍ঁদপুর শাাহ ভালাই এর দরগা\n\n
        16. বল্লভপুর চার্চ\n\n
        17. ভবরপাড়া রোমান ক্যাথলিক চার্চ\n\n
        18. নায়েব বাড়ি মন্দির\n\n
        19. স্বামী নিগমানন্দ সারস্বত আশ্রম\n\n

        ★বিখ্যাত খাবারঃ মিষ্টি সাবিত্রি, রসকদম্ব\n\n
    </string>
    <string name="jessore_text">
        ★পরিচিতিঃ যশোর জেলা বাংলাদেশের দক্ষিণ-পশ্চিমাঞ্চলের খুলনা বিভাগের একটি প্রশাসনিক ও রাজনৈতিক গুরুত্বসম্পন্ন অঞ্চল। এর অন্য একটি প্রচলিত বানান যশোহর। ব্রিটিশ আমলে খুলনা ছিল যশোর জেলার অধিভুক্ত একটি মহুকুমা।\n\n

        ★দর্শনীয় স্থানঃ \n\n
        1. যশোর ইনস্টিটিউট\n\n
        2. যশোর ইনস্টিটিউট পাবলিক লাইব্রেরী\n\n
        3. ফুলের হাট গদখালি\n\n
        4. সাগরদাড়ী, বাংলা পদ্যর জনক মাইকেল মধুসূদন দত্ত এর বাড়ি\n\n
        5. তাপস কুটির (কাস্টমস অফিস)\n\n
        6. যশোর বিমানবন্দর ও যশোর সেনানিবাস\n\n
        7. শ্রীধরপুর জমিদার বাড়ি\n\n
        8. বীরশ্রেষ্ঠ ল্যান্স নায়েক নূর মোহাম্মদ শেখের সমাধি\n\n
        9. মনিহার সিনেমা হল\n\n
        10. কালেক্টরেট পার্ক\n\n
        11.লালদীঘির পাড়\n\n
        12. বিনোদিয়া পার্ক\n\n
        13. যশোর বোট ক্লাব\n\n
        14. ভরত রাজার দেউল ( ভরত ভায়না )\n\n
        15. জেস গার্ডেন পার্ক\n\n
        16. যশোর আইটি পার্ক\n\n

        ★বিখ্যাত খাবারঃ খই, খেজুর গুড়, জামতলার মিষ্টি\n\n
    </string>
    <string name="satkhira_text">
        ★পরিচিতিঃ সাতক্ষীরা জেলা বাংলাদেশের দক্ষিণ-পশ্চিমাঞ্চলের খুলনা বিভাগের একটি প্রশাসনিক অঞ্চল।\n\n


        ★দর্শনীয় স্থানঃ \n\n
        1. সুন্দরবন\n\n
        2. মান্দারবাড়ী সমুদ্র সৈকত - শ্যামনগর\n\n
        3. জমিদার বাড়ি ও যশোরেশ্বরী মন্দির - শ্যামনগর\n\n
        4. নলতা রওজা শরীফ - কালীগঞ্জ\n\n
        5. নীলকুঠি - দেবহাটা থানা\n\n
        6. মাইচম্পার দরগা\n\n
        7. লাবসা - সাতক্ষীরা\n\n
        8. বৌদ্ধ মঠ - কলারোয়া\n\n
        9. তেঁতুলিয়া মসজিদ - তালা\n\n
        10. মোজাফফর গার্ডেন\n\n
        11. বনলতা বাগান ও মিনি পিকনিক স্পট - কালিগঞ্জ,সাতক্ষীরা\n\n
        12. আব্বাস গার্ডেন\n\n
        13. জমিদার হরিচরনের বাড়ি- শ্যামনগর\n\n
        14. জাহাজঘাটা-ভুরুলিয়া, শ্যামনগর\n\n
        15. মাটির টালি তৈরির কারখানা - কলারোয়া, সাতক্ষীরা\n\n
        16. বনবিবির বটগাছ- দেবহাটা, সাতক্ষীরা\n\n
        17. কলাগাছি, সুন্দরবন\n\n
        18. আকাশনীলা ইকো ট্যুরিজম সেন্টার; মুন্সিগঞ্জ, শ্যামনগর\n\n
        19. ভোমরা স্থল বন্দর, সাতক্ষীরা\n\n
        20. শ্যামনগর উপজেলার ঐতিহাসিক গোপালপুর স্মৃতিসৌধ\n\n
        21. রেডিও নলতা- নলতা, কালীগঞ্জ, সাতক্ষীরা\n\n

        ★বিখ্যাত খাবারঃ সন্দেশ\n\n
    </string>
</resources>