<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context="com.example.admin.bangladesh.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"

        >


        <Button
            android:id="@+id/khulnaid"
            android:text="@string/khulna_divin"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textStyle="bold"


            />

        <Button
            android:id="@+id/chittagongid"
            android:text="@string/chittagong_division"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textStyle="bold"
            android:layout_marginTop="20dp"


            />

        <Button
            android:id="@+id/dhakaid"
            android:text="@string/dhaka_division"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textStyle="bold"
            android:layout_marginTop="20dp"


            />
        <Button
            android:id="@+id/barishalid"
            android:text="@string/barishal_division"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textStyle="bold"
            android:layout_marginTop="20dp"


            />

        <Button
            android:id="@+id/mymensinghid"
            android:text="@string/mymensingh_division"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textStyle="bold"
            android:layout_marginTop="20dp"


            />

        <Button
        android:id="@+id/rangpurid"
        android:text="@string/rangpur_division"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textStyle="bold"
        android:layout_marginTop="20dp"


        />

        <Button
            android:id="@+id/rajshahiid"
            android:text="@string/rajshahi_division"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textStyle="bold"
            android:layout_marginTop="20dp"


            />

        <Button
            android:id="@+id/sylhetid"
            android:text="@string/sylhet_division"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textStyle="bold"
            android:layout_marginTop="20dp"


            />


    </LinearLayout>





</ScrollView>
